add the example

--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@
   }
 }
 
-.App-header {
+.body {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -22,17 +22,25 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  gap: 1rem;
 }
 
 .App-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn {
+  height: 2.4rem;
+  min-width: 8rem;
+  border-radius: 0.2rem;
+  border: none;
+  font-size: 1.2rem;
+}
+
+.input {
+  height: 2.4rem;
+  min-width: 18rem;
+  border-radius: 0.2rem;
+  border: none;
+  font-size: 1.2rem;
 }
